# shelf-life

./: .gitignore  LICENSE  README.md  app.js  package-lock.json  package.json  pyproject.toml  sendsms.py
app/: .gitignore
app/postcard/: ContentView.swift  DataManager.swift  Info.plist  Models.swift  WebView.swift  postcardApp.swift
app/postcard.xcodeproj/: project.pbxproj
app/postcard/Assets.xcassets/1.imageset/: Contents.json
app/postcard/Assets.xcassets/1_open.imageset/: Contents.json
app/postcard/Assets.xcassets/2.imageset/: Contents.json
app/postcard/Assets.xcassets/2_open.imageset/: Contents.json
app/postcard/Assets.xcassets/3.imageset/: Contents.json
app/postcard/Assets.xcassets/3_open.imageset/: Contents.json
app/postcard/Assets.xcassets/4.imageset/: Contents.json
app/postcard/Assets.xcassets/4_open.imageset/: Contents.json
app/postcard/Assets.xcassets/5.imageset/: Contents.json
app/postcard/Assets.xcassets/5_open.imageset/: Contents.json
app/postcard/Assets.xcassets/AccentColor.colorset/: Contents.json
app/postcard/Assets.xcassets/AppBackground.colorset/: Contents.json
app/postcard/Assets.xcassets/AppBlack.colorset/: Contents.json
app/postcard/Assets.xcassets/AppGreen.colorset/: Contents.json
app/postcard/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/postcard/Assets.xcassets/AppOrange.colorset/: Contents.json
app/shelf life.xcodeproj/: project.pbxproj
app/shelf life.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
server/: app.js  package-lock.json
(+2 files in other folders)
