[tool.poetry]
name = "postcard"
version = "0.1.0"
description = ""
authors = ["Jacob Wolf <jacob.h.wolf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
twilio = "^8.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
